--- a/client/src/assets/styles/1-base/_vars.sass
+++ b/client/src/assets/styles/1-base/_vars.sass
@@ -38,7 +38,7 @@ $brand-danger: #d9534f !default
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: "Montserrat", sans-serif !default
+$font-family-sans-serif: "Inconsolata", monospace !default
 $font-family-serif: Georgia, "Times New Roman", Times, serif !default
 $font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace !default
 $font-family-base: $font-family-sans-serif !default
