--- a/client/src/assets/styles/2-modules/_modal.scss
+++ b/client/src/assets/styles/2-modules/_modal.scss
@@ -13,7 +13,7 @@
     position: absolute;
     top: 20%;
     left: 20%;
-    bottom: 20%;
+    // bottom: 20%;
     right: 20%;
     border: 1px solid $gray-lighter;
     background: $white;
