--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -15,6 +15,7 @@
 @import 2-modules/spinner
 @import 2-modules/animations
 @import 2-modules/chat
+@import 2-modules/contextmenu
 
 
 @import 3-sections/homepage
