--- a/client/src/assets/styles/4-layouts/_layout.scss
+++ b/client/src/assets/styles/4-layouts/_layout.scss
@@ -69,7 +69,15 @@ button:focus {
 .padding-top {
     padding-top: 20px;
 }
-
+.padding {
+    padding: 20px;
+}
+.margin {
+    margin: 20px;
+}
 .display-none {
     display: none;
+}
+.pointer{
+  cursor: pointer;
 }
