--- a/client/src/assets/styles/2-modules/_file-meta.scss
+++ b/client/src/assets/styles/2-modules/_file-meta.scss
@@ -41,6 +41,10 @@
         text-align: left;
         font-weight: 500;
         padding: 8px 10px 8px 3em;
+        width: 150px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
     .flaticon {
