--- a/client/src/assets/styles/3-sections/_main-library.scss
+++ b/client/src/assets/styles/3-sections/_main-library.scss
@@ -1,6 +1,7 @@
 .library {
     animation: fadeIn 0.3s ease-in;
-
+    height: 700px;
+    margin-top: 15px;
     h2 {
         font-size: 0.8em;
         text-align: left;
