--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -16,6 +16,8 @@
 @import 2-modules/animations
 @import 2-modules/chat
 @import 2-modules/contextmenu
+@import 2-modules/tooltips
+
 
 
 @import 3-sections/homepage
