--- a/client/src/assets/styles/main.sass
+++ b/client/src/assets/styles/main.sass
@@ -17,7 +17,7 @@
 @import 2-modules/chat
 @import 2-modules/contextmenu
 @import 2-modules/tooltips
-
+@import 2-modules/musicplayer
 
 
 @import 3-sections/homepage
