:sparkles: :art: List and Grid View Added

--- a/client/src/assets/styles/4-layouts/_layout.scss
+++ b/client/src/assets/styles/4-layouts/_layout.scss
@@ -84,3 +84,8 @@ button:focus {
 .rename{
   background-color: $gray-lightest;
 }
+.view {
+  padding-top: 10px;
+  width: 25px;
+  cursor: pointer;
+}
