--- a/client/src/assets/styles/1-base/_vars.sass
+++ b/client/src/assets/styles/1-base/_vars.sass
@@ -11,7 +11,8 @@ $red: #dc6868
 
 $progress-gradient: darken(saturate(adjust-hue($main, 0.2858), 0), 31.9608)
 
-$white: #fefefa !default
+// $white: #fefefa !default
+$white: #F8F8FF !default
 $black: #000000
 $gray-dark: #373a3c !default
 $gray: #55595c !default
