--- a/client/src/assets/styles/1-base/_vars.sass
+++ b/client/src/assets/styles/1-base/_vars.sass
@@ -12,7 +12,7 @@ $red: #dc6868
 $progress-gradient: darken(saturate(adjust-hue($main, 0.2858), 0), 31.9608)
 
 // $white: #fefefa !default
-$white: #F8F8FF !default
+$white: #F5F5F5 !default
 $black: #000000
 $gray-dark: #373a3c !default
 $gray: #55595c !default
