:art::art::art:

--- a/client/src/assets/styles/2-modules/_modal.scss
+++ b/client/src/assets/styles/2-modules/_modal.scss
@@ -11,10 +11,10 @@
 
 .modal {
     position: fixed;
-    top: 20%;
-    left: 20%;
+    // top: 20%;
+    // left: 20%;
     // bottom: 20%;
-    right: 20%;
+    // right: 20%;
     border: 1px solid $gray-lighter;
     background: $white;
     overflow: auto;
