--- a/client/src/assets/styles/3-sections/_main-library.scss
+++ b/client/src/assets/styles/3-sections/_main-library.scss
@@ -1,6 +1,6 @@
 .library {
     animation: fadeIn 0.3s ease-in;
-    min-height: 700px;
+    // min-height: 700px;
     margin-top: 15px;
     margin-bottom: 40px;
     h2 {
