--- a/client/src/assets/styles/2-modules/_scrollbar.scss
+++ b/client/src/assets/styles/2-modules/_scrollbar.scss
@@ -24,9 +24,10 @@
 }
 
 ::-webkit-scrollbar-track {
-    border: solid #fff;
+    // border: solid #fff;
     border-width: 1px 1px 1px 2px;
-    background-color: #fff;
+    // background-color: #fff;
+    background-color: transparent;
     background-clip: content-box;
 }
 
