--- a/client/src/assets/styles/3-sections/_main.scss
+++ b/client/src/assets/styles/3-sections/_main.scss
@@ -1,6 +1,8 @@
 .main {
     background-color: $body-bg;
-    min-height: 100vh;
+    // min-height: 100vh;
+    max-height: 89vh;
+    overflow-y: auto;
     animation: zoomfade 1s ease-in;
 }
 .main-bg {
