--- a/client/src/assets/styles/3-sections/_main-library.scss
+++ b/client/src/assets/styles/3-sections/_main-library.scss
@@ -1,8 +1,8 @@
 .library {
     animation: fadeIn 0.3s ease-in;
-    // min-height: 700px;
+    min-height: 77vh;
     margin-top: 15px;
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
     h2 {
         font-size: 0.8em;
         text-align: left;
